Tasks nr 5 and 6 solved, all tests pass